--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -18,16 +17,36 @@ jobs:
         node-version: [20.x]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm' # speeds up installs
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm ci  # cleaner + faster than npm install for CI
 
-    - name: Start application
-      run: npm start
+      - name: Run build
+        run: |
+          if [ -f package.json ] && grep -q "\"build\"" package.json; then
+            npm run build
+          else
+            echo "⚠️ No build script found, skipping build step"
+          fi
+
+      - name: Run tests
+        run: |
+          if [ -f package.json ] && grep -q "\"test\"" package.json; then
+            npm test
+          else
+            echo "⚠️ No test script found, skipping test step"
+          fi
+
+      - name: Verify app start (optional)
+        run: |
+          nohup npm start &
+          sleep 5
+          curl -I http://localhost:3000 || echo "App did not respond"
